Fixed bug where message title was too long for mark as read box

--- a/styles.css
+++ b/styles.css
@@ -592,6 +592,7 @@ ul {
 select[id="message-title"] {
     font-family: 'Poppins', sans-serif;
     height:40px;
+    max-width: 175px;
     padding-right:10px;
 }
 
